# nix-link-cleanup

./: .gitignore  Cargo.toml  README.md  flake.nix  module.nix
src/: main.rs
